# anime-object-cut

./: LICENSE  README.md  avatar.py  detect.py  gen.py  main.py  pyproject.toml  utils.py
